# src/routes/dairy.js
@@ -13,8 +13,13 @@ const router = express.Router();
 
 router.get("/entries/:userId", protect, getAllEntries);
 router.get("/entry/:entryId", protect, getEntry);
-router.post("create/:userId", protect, createEntry);
-router.put("update/:entryId", protect, updateEntry);
-router.delete("delete/:entryId", protect, deleteEntry);
+router.post("/create/:userId", protect, createEntry);
+router.put("/update/:entryId", protect, updateEntry);
+router.delete("/delete/:entryId", protect, deleteEntry);
+
+// router.get("/:userId/entries/:entryId", getAllTasks);
+// router.post("/:userId/entries", createTask);
+// router.put("/:userId/entries/:entryId", updateTask);
+// router.delete("/:userId/entries/:entryId", deleteTask);
 
 module.exports = router;
